--- a/my-app/src/Pages/SelectedPost/SelectedPost.module.scss
+++ b/my-app/src/Pages/SelectedPost/SelectedPost.module.scss
@@ -15,10 +15,10 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     border-style: none;
-    background-color: #fff;
+    background-color: unset;
     border-right: 1px solid #8D8E97;
     cursor: pointer;
-    color: #313037;
+    color: unset;
 }
 .btnPost {
     font-size: 16px;
@@ -27,9 +27,9 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #8D8E97;
+    color: unset;
     border-style: none;
-    background-color: #fff;
+    background-color: unset;
 }
 .postTitle {
     font-size: 56px;
@@ -65,8 +65,6 @@
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #313037;
-
 }
 .wrap {
     display: flex;
@@ -82,7 +80,6 @@
 }
 .iconWrap {
     padding: 17px 32px;
-    background-color: #E8E8E8;
     margin-right: 6px;
     border-radius: 2px;
 }
@@ -95,7 +92,6 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 17px 32px;
-    background-color: #E8E8E8;
     margin-right: 6px;
     border-radius: 2px;
 }
@@ -140,7 +136,6 @@ margin-right: 24px;
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #313037;
     margin-bottom: 8px;
 }
 .prevTitle {
@@ -150,7 +145,6 @@ margin-right: 24px;
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #8D8E97;
 }
 .nextDescription {
     display: flex;
@@ -164,7 +158,6 @@ margin-right: 24px;
     text-align: right;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    color: #313037;
     margin-bottom: 8px;
 }
 .arrowNext{
