--- a/my-app/src/Components/TextArea/TextArea.module.scss
+++ b/my-app/src/Components/TextArea/TextArea.module.scss
@@ -4,6 +4,8 @@
     width: 1120px;
     height: 273px;
     justify-content: space-between;
+    padding-bottom: 40px;
+
 }
 .textareaTitle {
     font-size: 16px;
