--- a/my-app/src/Pages/AddPost/AddPost.module.scss
+++ b/my-app/src/Pages/AddPost/AddPost.module.scss
@@ -1,5 +1,55 @@
-.addpost {
+.container {
+    max-width: 1120px;
+    padding: 0 15px;
+    margin: auto;
+}
+.addPostHeader {
     display: flex;
-    width: 600px;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 1120px;
+    margin: auto;
+    margin-top: 72px;
+}
+.button {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+.addPostBody{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 1120px;
+    margin-bottom: 76px;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+}
+.input {
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    padding-bottom: 40px;
+}
+.inputTitle {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+    color: #313037;
+    text-align: left;
+    margin-bottom: 15px;
+}
+.textarea {
+    display: flex;
+    flex-direction: column;
+    width: 1120px;
+    height: 98px;
+    justify-content: space-between;
+    padding-bottom: 40px;
+
 }
