--- a/my-app/src/Components/User/User.module.scss
+++ b/my-app/src/Components/User/User.module.scss
@@ -27,3 +27,14 @@
     line-height: 83px;
     text-align: center;
 }
+.profileWrap {
+    width: 84px;
+    height: 8.3vh;
+    background-color: #2231AA;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.profileWrap svg {
+    stroke: #fff;
+}
