HW 48, 50, 51 in progress

--- a/my-app/src/Components/User/User.module.scss
+++ b/my-app/src/Components/User/User.module.scss
@@ -20,12 +20,14 @@
     font-weight: 600;
     line-height: 48px;
     text-align: center;
+    color: #fff;
 }
 .username {
     font-size: 16px;
     font-weight: 600;
     line-height: 83px;
     text-align: center;
+    color: #fff;
 }
 .profileWrap {
     width: 84px;
