--- a/my-app/src/UI-components/Search/Search.module.scss
+++ b/my-app/src/UI-components/Search/Search.module.scss
@@ -1,3 +1,8 @@
+.searchWrap {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
 .searchButton {
     width: 84px;
     height: 8.3vh;
@@ -7,4 +12,18 @@
 .seacrh {
     width: 84px;
     height: 8.3vh;
+}
+.input {
+    height: 56px;
+    border-radius: 2px;
+    font-size: 16px;
+    line-height: 20px;
+    padding: 0 14px;
+    font-weight: 400;
+    color: fff;
+    border: 1px solid #8D8E97;
+    opacity: 0;
+}
+.input.active {
+    opacity: 1;
 }
