--- a/my-app/src/UI-components/SearchInput/SearchInput.module.scss
+++ b/my-app/src/UI-components/SearchInput/SearchInput.module.scss
@@ -1,14 +1,42 @@
 .search {
-    height: 56px;
-    border-radius: 2px;
+    display: flex;
+    justify-content: end;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+}
+.search.active {
+    opacity: 1;
+}
+.inputField {
+    width: 95%;
+    background-color: #5360CD;
     font-size: 16px;
     line-height: 20px;
     padding: 0 14px;
     font-weight: 400;
     color: fff;
-    border: 1px solid #8D8E97;
+}
+.inputField:focus {
+    cursor: text;
+}
+.inputField::placeholder {
+    color: #8D8E97;
+}
+.inputField:focus::placeholder {
     opacity: 0;
 }
-.search.active {
-    opacity: 1;
+.cancelButton {
+    width: 84px;
+    height: 8.3vh;
+    background-color: #5360CD;
+    cursor: pointer;
+    border: unset;  
+}
+.cancelButton svg {
+    stroke: #fff;
+}
+.cansel {
+    width: 84px;
+    height: 8.3vh;
 }
