--- a/my-app/src/Components/Template/Template.module.scss
+++ b/my-app/src/Components/Template/Template.module.scss
@@ -26,7 +26,7 @@
     font-size: 16px;
     line-height: 20px;
     font-weight: 400;
-    background-color: #DADADA;
+    background-color: #fff;
 }
 .text {
     font-size: 16px;
