--- a/my-app/src/Pages/MyPosts/MyPosts.module.scss
+++ b/my-app/src/Pages/MyPosts/MyPosts.module.scss
@@ -3,6 +3,17 @@
     padding: 0 15px;
     margin: auto;
 }
+.wrap {
+    display: flex;
+    flex-direction: column;
+}
+.ordering {
+    display: flex;
+    flex-direction: row;
+    width: 200px;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
 .middlePostWrap {
     display: flex;
     flex-direction: row;
@@ -41,6 +52,7 @@
     justify-content: space-between;
     align-items: center;
     height: 56px;
+    cursor: pointer;
 }
 .arrowPrev{
 margin-right: 24px;
@@ -74,7 +86,6 @@ cursor: pointer;
 }
 .arrowNext{
     margin-left: 24px;
-    cursor: pointer;
 }
 
 .page {
